# ddi

./: .env  config.py  layout.py  main.py  pyproject.toml  run-ddi.sh  tail.py  tile.py  ui.py
tests/: conftest.py  test_config.py  test_layout.py  test_tail.py  test_ui.py
