[project]
name = "ddi-dashboard"
version = "0.1.0"
description = "PyQt dashboard launcher for local IO and pipeline tools"
requires-python = ">=3.9,<3.10"
dependencies = [
    "PyQt5>=5.15.11,<6",
    "python-dotenv>=1.2.1,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[tool.uv]
package = false
